added sonar properties

--- a/src/sonar-project.properties
+++ b/src/sonar-project.properties
@@ -2,3 +2,4 @@ sonar.projectKey=jenkins_project
 sonar.projectVersion=1.0
 sonar.source=src
 sonar.host.url=http://localhost:9000/
+sonar.login=c75dd81eabe6d5f2d9a58f4485b32f694b329695
