updated sonar settings

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=jenkins_project
+sonar.projectKey=test-sonar
 sonar.projectVersion=1.0
 sonar.source=src
-sonar.host.url=http://localhost:9000/
-sonar.login=c75dd81eabe6d5f2d9a58f4485b32f694b329695
+sonar.host.url=http://http://54.158.192.77:9000/
+sonar.login=99e87e1d9a8cd217bc710c07fd161cb6bb54c50c
