--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=test-sonar
 sonar.projectVersion=1.0
 sonar.source=src
-sonar.host.url=http://http://54.158.192.77:9000/
+sonar.host.url=http://localhost:9000
