added new project token

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,4 @@ sonar.projectKey=test-sonar
 sonar.projectVersion=1.0
 sonar.source=src
 sonar.host.url=http://localhost:9000
+sonar.login=98ba66eabe66e7b89b5425da2b71b356e8f36600
